# aoc-tools

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  new.ts  run.ts
src/: main.rs
templates/: template.Cargo.toml  template.py  template.rs  template.ts
